docker/kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: plugin-jam-bot
  labels:
    app: bot
