docker/kubernetes/game-jam-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
spec:
  template:
    metadata:
      labels:
        app: bot
    spec:
      containers:
        - name: bot
          image: game-jam-bot
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
              name: jam-bot
  selector:
    matchLabels:
      app: bot
---
apiVersion: v1
kind: Service
metadata:
  name: bot-01
spec:
  ports:
    - name: http
      port: 80
      targetPort: jam-bot
      protocol: TCP
  selector:
    app: bot
